--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "cross-env next dev",
+    "dev": "cross-env next dev -p 3001",
     "build": "next build",
     "start": "next start",
     "lint": "eslint .",
@@ -20,26 +20,34 @@
     "@types/node": "18.15.2",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "axios": "^1.4.0",
     "cross-env": "^7.0.3",
     "eslint-config-next": "13.2.4",
     "firebase": "^9.19.1",
     "firebase-admin": "^11.6.0",
     "firebase-functions": "^4.3.0",
     "next": "13.2.4",
+    "openai": "^3.2.1",
     "react": "18.2.0",
+    "react-calendar-heatmap": "^1.9.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
+    "react-toastify": "^9.1.3",
     "typescript": "4.9.5",
     "yup": "^1.1.1"
   },
   "devDependencies": {
+    "@types/react-calendar-heatmap": "^1.6.3",
     "@typescript-eslint/eslint-plugin": "^5.59.1",
     "@typescript-eslint/parser": "^5.59.1",
+    "autoprefixer": "^10.4.15",
     "eslint": "^8.39.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "postcss": "^8.4.29",
     "prettier": "^2.8.8",
     "sass": "^1.62.1",
+    "tailwindcss": "^3.3.3",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0"
   }
